--- a/mediaqueries.html
+++ b/mediaqueries.html
@@ -7,8 +7,36 @@
     <link rel="stylesheet" href="./mediaqueries.css">
 </head>
 <body>
-    <div class="contain">
+    <!-- <div class="contain">
         <h1>Desny</h1>
+    </div> -->
+
+    <div class="nav">
+        <div class="left">
+            <h1>SYNNEFO</h1>
+        </div>
+        <div class="right">
+            
+            <p>HOME</p>
+            <p>ABOUT</p>
+            <p>CONTACT</p>
+            <button>LOGIN</buton>
+        </div>
+    </div>
+    <div class="main">
+    
+        <div class="cards"><h1>SYNNEFO</div>
+        <div class="cards"><h1>SYNNEFO</div>
+        <div class="cards"><h1>SYNNEFO</div>
+        <div class="cards"><h1>SYNNEFO</div>
+        <div class="cards"><h1>SYNNEFO</div>
+        <div class="cards"><h1>SYNNEFO</div>
+        <div class="cards"><h1>SYNNEFO</div>
+        <div class="cards"><h1>SYNNEFO</div>
+        <div class="cards"><h1>SYNNEFO</div>
+        <div class="cards"><h1>SYNNEFO</div>
+        <div class="cards"><h1>SYNNEFO</div>
+        <div class="cards"><h1>SYNNEFO</div>
     </div>
 </body>
 </html>
