--- a/tailwind.html
+++ b/tailwind.html
@@ -7,19 +7,14 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
-    <div class="w-[90vw] h-[90vh] bg-green-200 m-10 rounded-full">
-        <div class="bg[url(WhatsApp Image 2025-08-22 at 09.22.54_83794e00.jpg)]">
-            <h1 class="text-6xl text-red-500 text-center">Hello</h1>
-        <h4 class="text-3xl italic text-cyan-400 overline decoration-dashed text-justify">Desny</h4>
-        <p class="text-xl text-purple-300 line-through decoration-wavy text-end">Synnefo</p>
-        </div>
+    <div class="w-[70vw] h-[70vh] bg-green-200  m-10 rounded-full bg-[url(./image.jpg)]">
+
         <h1 class="text-6xl text-red-500 text-center">Hello</h1>
-        <h4 class="text-3xl italic text-cyan-400 overline decoration-dashed text-justify">Desny</h4>
-        <p class="text-xl text-purple-300 line-through decoration-wavy text-end">Synnefo</p>
+
+        <h4 class="text-3xl italic text-cyan-400 overline decoration-dashed text-center">Desny</h4>
+
+        <p class="text-xl text-purple-300 line-through decoration-wavy text-center">Synnefo</p>
+
     </div>
-
-    <!-- <div class="w[20vw] h[20vh] bg-purple-300">
-
-    </div> -->
 </body>
 </html>
